--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,23 +8,27 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* changed from .header class to header tag */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+/* removed unnecessary parent specification */
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+/* removed unnecessary parent specification */
+.seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* changed from ".header div" to nav tag */
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +36,8 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+/* removed unnecessary parent specification */
+li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -45,6 +46,7 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+
 
 p {
     font-size: 16px;
@@ -188,13 +190,15 @@ p {
     font-size: 36px;
 }
 
-.footer {
+/* changed from .footer class to footer tag */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+/* changed from .footer class to footer tag */
+footer h2 {
     font-size: 20px;
 }
