--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+
 /* changed from .header class to header tag */
 header {
     padding: 20px;
@@ -52,6 +53,8 @@ p {
     font-size: 16px;
 }
 
+
+/* 56-63 inserts large photo */
 .hero {
     height: 800px;
     width: 100%;
@@ -77,64 +80,6 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
 .search-engine-optimization {
     margin-bottom: 20px;
@@ -189,6 +134,39 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+
+/* changed from .benefits class to aside tag */
+aside {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+/* consolidated .benefit-X classes into section tag */
+aside section {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+/* consolidated h3 properties */
+aside h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/* consolidated img properties */
+aside img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
 
 /* changed from .footer class to footer tag */
 footer {
