--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -4,11 +4,18 @@
     margin: 0;
 }
 
+/* untouched! */
 body {
     background-color: #d9dcd6;
 }
 
+/* moved to top since universal across sections, but otherwise untouched! */
+p {
+    font-size: 16px;
+}
 
+
+/* HEADER */
 /* changed from .header class to header tag */
 header {
     padding: 20px;
@@ -43,18 +50,14 @@ li {
     margin-left: 25px;
 }
 
+/* untouched! */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
 
-p {
-    font-size: 16px;
-}
-
-
-/* 56-63 inserts large photo */
+/* PHOTO */
 .hero {
     height: 800px;
     width: 100%;
@@ -64,24 +67,17 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
+/* MAIN CONTENT */
+/* changed from .content class to main tag */
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-
-.search-engine-optimization {
+/* consolidated .search-engine-optimization, .online-reputation-management, and .social-media-marketing classes into section tag */
+main section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -90,52 +86,28 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/* consolidated img properties and made old .float-left class properties default */
+main img {
     max-height: 200px;
+    float: left;
+    margin-right: 25px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
+/* added line to reset margin-right to 0px to counter new default of 25px, but otherwise untouched */
+.float-right {
+    float: right;
+    margin-right: 0px;
+    margin-left: 25px;
 }
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+/* consolidated h2 properties and removed unnecessary parent specification */
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
 
+/* SIDEBAR */
 /* changed from .benefits class to aside tag */
 aside {
     margin-right: 20px;
@@ -154,8 +126,8 @@ aside section {
     color: #ffffff;
 }
 
-/* consolidated h3 properties */
-aside h3 {
+/* consolidated h3 properties and removed unnecessary parent specification */
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -168,6 +140,7 @@ aside img {
 }
 
 
+/* FOOTER */
 /* changed from .footer class to footer tag */
 footer {
     padding: 30px;
@@ -176,7 +149,7 @@ footer {
     text-align: center;
 }
 
-/* changed from .footer class to footer tag */
-footer h2 {
+/* changed from h2 tag to h4 tag and removed now-unnecessary parent specification */
+h4 {
     font-size: 20px;
 }
